--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,3 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.21.4
@@ -10,3 +8,5 @@ kotlin_loader_version=1.13.4+kotlin.2.2.0
 mod_version=1.0-SNAPSHOT
 maven_group=io.github.betterclient
 archives_base_name=Ascendium
+
+org.gradle.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
