--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,11 @@ maven_group=io.github.betterclient
 archives_base_name=Ascendium
 
 org.gradle.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+
+kotlin.incremental=true
+kotlin.compiler.execution.strategy=in-process
+kotlin.coroutines=enable
+org.gradle.unsafe.configuration-cache=true
+
+org.gradle.caching=true
+org.gradle.parallel=true
