--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,10 @@ mod_version=1.0-SNAPSHOT
 maven_group=io.github.betterclient
 archives_base_name=Ascendium
 
-org.gradle.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4g -Xms1g -XX:MaxMetaspaceSize=2g -Dfile.encoding=UTF-8
 
 kotlin.incremental=true
-kotlin.compiler.execution.strategy=in-process
+kotlin.compiler.execution.strategy=daemon
 kotlin.coroutines=enable
 org.gradle.unsafe.configuration-cache=true
 
